Can now receive a List<List<PokerPlayer>>, that contains the players in winning order, with tied hands in the same rank, where the index +1 is the rank